--- a/src/Shared/assets/scss/main.scss
+++ b/src/Shared/assets/scss/main.scss
@@ -307,6 +307,7 @@ header {
         overflow: auto;
         background-color: #333;
         text-align: left;
+        z-index: 2;
 
         a {
           display: block;
